tmux: set escape-time 50ms

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -49,7 +49,7 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 # set -g @plugin 'git@bitbucket.com:user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+# run '~/.tmux/plugins/tpm/tpm'
 
 set -g default-terminal "xterm-256color"
 
@@ -57,3 +57,6 @@ set-window-option -g mode-keys vi
 setw -g mode-keys vi
 # bind-key -t vi-copy 'v' begin-selection
 # bind-key -t vi-copy 'y' copy-selection
+
+# lastest version of tmux
+set-option -g escape-time 50
