--- a/persional/.persionalrc
+++ b/persional/.persionalrc
@@ -1,4 +1,3 @@
-export PATH="$PATH:$HOME/dotfiles/centors/bin"
-
 alias jj='tmux -u a -t'
 
+export FZF_DEFAULT_COMMAND='rg --hidden  --glob=!.git/   -l ""'
