nvim: coc git color

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -32,6 +32,9 @@
     "diagnostic.enableMessage": "never",
     "suggest.enablePreselect": true,
     "suggest.noselect": false,
+    "git.addedSign.hlGroup": "GitSignsAdd",
+    "git.changedSign.hlGroup": "GitSignsChange",
+    "git.removedSign.hlGroup": "GitSignsDelete",
     "pairs.enableCharacters": [
         "(",
         "[",
