--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -44,8 +44,8 @@
         "`"
     ],
     "explorer.git.enable": false,
+    "explorer.file.reveal.whenOpen": false,
     "explorer.filename.colored.enable": false,
-    "explorer.focus": false,
     "explorer.file.child.template": "[git | 2] [selection | clip | 1] [indent][icon | 1] [diagnosticError & 1][filename omitCenter 1][modified][readonly] [linkIcon & 1][link growRight 1 omitCenter 5]",
     "explorer.keyMappings.global": {
         "<cr>": [
