vim: fix coc-fzf and refine <leader>g

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -33,6 +33,10 @@
     "diagnostic.virtualText": true,
     "diagnostic.virtualTextCurrentLineOnly": false,
     "diagnostic.enableMessage": "never",
+    "git.enableGlobalStatus": false,
+    "git.realtimeGutters": true,
+    "git.semanticCommit.scope": false,
+    "git.conflict.enabled": false,
     "git.addedSign.hlGroup": "GitSignsAdd",
     "git.changedSign.hlGroup": "GitSignsChange",
     "git.removedSign.hlGroup": "GitSignsDelete",
