Revert "vim: enalbe inlayhint and placeholders"
This reverts commit f228516be82dbc15176ece5887026b2fbba4bb5c.

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -3,7 +3,6 @@
     "go.goplsUseDaemon": false,
     "go.goplsOptions": {
         "semanticTokens": true,
-        "usePlaceholders": true,
         "hints": {
             "compositeLiteralFields": true,
             "compositeLiteralTypes": true,
@@ -14,7 +13,7 @@
             "rangeVariableTypes": true
         }
     },
-    "inlayHint.enable": true,
+    "inlayHint.enable": false,
     "semanticTokens.enable": true,
     "clangd.arguments": [
         "--function-arg-placeholders=0",
@@ -25,7 +24,6 @@
         "--all-scopes-completion",
         "--completion-style=detailed",
         "--header-insertion=iwyu",
-        "--function-arg-placeholders",
         "--pch-storage=memory"
     ],
     "rust-analyzer.server.path": "~/.cargo/bin/rust-analyzer",
