--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -65,27 +65,29 @@
         "--smart-case"
     ],
     "list.insertMappings": {
-		"<C-r>": "do:refresh",
-        "<C-n>":"normal:j",
-        "<C-p>":"normal:k",
-        "<Tab>":"do:toggle",
-        "<A-a>":"do:selectall",
-        "<c-f>":"do:chooseaction"
+        "<C-r>": "do:refresh",
+        "<C-n>": "normal:j",
+        "<C-p>": "normal:k",
+        "<Tab>": "do:toggle",
+        "<A-a>": "do:selectall",
+        "<c-f>": "do:chooseaction"
     },
     "list.normalMappings": {
-		"<C-r>": "do:refresh",
-        "<C-n>":"normal:j",
-        "<C-p>":"normal:k",
-        "q":"do:exit",
-        "<Tab>":"do:toggle",
-        "<A-a>":"do:selectall",
-        "<c-f>":"do:chooseaction"
+        "<C-r>": "do:refresh",
+        "<C-n>": "normal:j",
+        "<C-p>": "normal:k",
+        "q": "do:exit",
+        "<Tab>": "do:toggle",
+        "<A-a>": "do:selectall",
+        "<c-f>": "do:chooseaction"
     },
     "explorer.git.enable": false,
     "explorer.file.reveal.whenOpen": false,
     "explorer.filename.colored.enable": false,
-    "explorer.file.child.template": "[git | 2] [selection | clip | 1] [indent][icon | 1] [diagnosticError & 1][filename omitCenter 1][modified][readonly] [linkIcon & 1][link growRight 1 omitCenter 5]",
+    "explorer.file.child.template": "[git | 2] [selection | clip | 1] [indent][icon | 1] [filename omitCenter 1][modified][readonly] [linkIcon & 1][link growRight 1 omitCenter 5]",
     "explorer.keyMappings.global": {
+        "f": "searchRecursive",
+        "th": "toggleHidden",
         "<cr>": [
             "wait",
             "expandable?",
