coc-explorer: <c-v> open:vsplit

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -88,6 +88,7 @@
     "explorer.keyMappings.global": {
         "f": "searchRecursive",
         "th": "toggleHidden",
+        "<c-v>": "open:vsplit",
         "<cr>": [
             "wait",
             "expandable?",
