nvim(coc): add winbar

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -96,5 +96,6 @@
             "open"
         ]
     },
+    "coc.preferences.currentFunctionSymbolAutoUpdate": true,
     "snippets.ultisnips.pythonPrompt": false
 }
