nvim(coc): change shortcut

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -31,6 +31,9 @@
     "suggest.virtualText": true,
     "suggest.enablePreselect": true,
     "suggest.noselect": false,
+    "coc.source.buffer.enable": false,
+    "coc.source.file.shortcut": "FILE",
+    "coc.source.around.shortcut": "CUR_BUF",
     "signature.enable": false,
     "signature.hideOnTextChange": true,
     "diagnostic.virtualText": true,
