nvim(coc): outline sort by postion

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -54,6 +54,7 @@
         "\"",
         "`"
     ],
+    "outline.sortBy": "position",
     "list.height": 22,
     "list.source.files.defaultOptions": [
         "--auto-preview"
