nvim(lsp): update progress for neovim0.10

--- a/nvim/.config/nvim/coc-settings.json
+++ b/nvim/.config/nvim/coc-settings.json
@@ -14,7 +14,7 @@
             "rangeVariableTypes": true
         }
     },
-    "inlayHint.enable": true,
+    "inlayHint.enable": false,
     "semanticTokens.enable": true,
     "clangd.arguments": [
         "--function-arg-placeholders=1",
